Chaning all to sql database